--- a/web/react_web/src/components/Product.css
+++ b/web/react_web/src/components/Product.css
@@ -91,6 +91,63 @@
     margin-bottom : 10px;
 }
 
+.Collapsible-product-new {
+    padding-top: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: block;
+    height: auto;
+    border-bottom: 1px solid black;
+}
+
+
+.Collapsible-product-new__trigger {
+    font-family: 'Noto Sans', sans-serif;
+    width:100%;
+    height: 20px;
+    font-size : 17px;
+    color : gray;
+    line-height: 23px;
+}
+
+.Collapsible-product-new__trigger::after {
+    content:"NEW";
+    color: red;
+    margin-left : 5px;
+    font-size : 13px;
+    vertical-align: top;
+    line-height: inherit;
+    /*background:url(../../public/src/image/publishing/new.png) no-repeat;*/
+}
+
+.Collapsible-product-new__trigger.is-open {
+    color : rgb(0, 0, 0);
+}
+
+.Collapsible-product-new__trigger:hover {
+    color : rgb(0, 0, 0);
+    cursor: pointer;
+}
+
+.Collapsible-product-new__contentInner {
+    text-overflow : auto;
+    font-family: "Nanum Gothic";
+    font-size : 15px;
+    padding-bottom : 10px;
+    padding-top : 10px;
+}
+
+.Collapsible-product-new__contentInner .info {
+    margin-top: 25px;
+    text-align: right;
+}
+
+.Collapsible-product-new__contentOuter {
+    margin-top : 10px;
+    margin-bottom : 10px;
+}
+
+
 .call-box {
     font-family: "Nanum Gothic";
     margin-top: 20px;
@@ -99,6 +156,19 @@
     margin-right: 40px;
     font-size : 15px;
     font-weight: 500;
+}
+
+.caption-box {
+    font-family: "Nanum Gothic";
+    margin-top: 20px;
+    position :relative;
+    width: 100%;
+    float: right;
+    font-size : 15px;
+    font-weight: 500;
+    text-align: right;
+    margin-right: 40px;
+    color: rgb(255, 0, 0);
 }
 
 .intro-text {
@@ -116,6 +186,11 @@
 }
 
 @media screen and (max-width: 480px) {
+  .caption-box {
+      font-size : 12px;
+      margin-right: 20px;
+  }
+
   .m-call-text {
     display: block;
   }
@@ -189,6 +264,51 @@
       margin-top : 10px;
       margin-bottom : 10px;
   }
+
+  .Collapsible-product-new {
+        padding-top: 20px;
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+        display: block;
+        height: auto;
+        border-bottom: 1px solid black;
+    }
+
+    .Collapsible-product-new__trigger {
+        font-family: 'Noto Sans', sans-serif;
+        width:100%;
+        height: 20px;
+        font-size : 17px !important;
+        color : black !important;
+    }
+
+    .Collapsible-product-new__trigger.is-open {
+        color : rgb(0, 0, 0);
+    }
+
+    .Collapsible-product-new__trigger:hover {
+        color : rgb(0, 0, 0);
+        cursor: pointer;
+    }
+
+    .Collapsible-product-new__contentInner {
+        text-overflow : auto;
+        font-family: "Nanum Gothic";
+        margin-left: 0px !important;
+        font-size : 14px !important;
+        padding-bottom : 10px;
+        padding-top : 10px;
+    }
+
+    .Collapsible-product-new__contentInner .info {
+        margin-top: 25px;
+        text-align: right;
+    }
+
+    .Collapsible-product-new__contentOuter {
+        margin-top : 10px;
+        margin-bottom : 10px;
+    }
 
   .call-box {
     font-family: "Nanum Gothic";
