--- a/web/react_web/src/components/ServiceHome.css
+++ b/web/react_web/src/components/ServiceHome.css
@@ -94,6 +94,86 @@
   text-decoration: none;
 }
 
+.Homerun-container {
+  width: 100%;
+  height: 700px;
+  /*background-color: rgb(255, 0, 0);*/
+  background-image: url(../../public/src/image/publishing/baseball_ready.jpg);
+  background-repeat: no-repeat;
+  background-size : cover;
+  padding-top: 80px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.Homerun-text-block {
+  margin-left: auto;
+  margin-right: auto;
+  height: auto;
+  width: 30%;
+  text-align: center;
+
+}
+
+.Homerun-text-title {
+  display: block;
+  font-size: 23px;
+  color : rgb(255, 255, 255);
+}
+
+.Homerun-text-subtitle {
+  display: block;
+  font-size: 30px;
+  color : rgb(255, 255, 255);
+}
+
+.Homerun-text-link {
+  font-family: "Nanum Gothic";
+  margin-top: 8px;
+  display: -webkit-flex;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(255, 255, 255);
+  width: 90px;
+  height: 38px;
+  border : 1px solid white;
+}
+
+.Homerun-text-link:hover {
+  color : rgb(255, 255, 255);
+  text-decoration: none;
+}
+
+
+.Homerun-text-link-black {
+  font-family: "Nanum Gothic";
+  margin-top: 8px;
+  display: -webkit-flex;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  -webkit-align-items: center;
+          align-items: center;
+  -webkit-justify-content: center;
+          justify-content: center;
+  font-size: 12px;
+  color : rgb(0, 0, 0);
+  width: 90px;
+  height: 38px;
+  border : 1px solid black;
+}
+
+.Homerun-text-link-black:hover {
+  color : rgb(0, 0, 0);
+  text-decoration: none;
+}
+
 .Recovery-text-title {
   display: block;
   font-size: 23px;
@@ -142,6 +222,11 @@
     background-position: center;
   }
 
+  .Homerun-container {
+    height: 210px;
+    background-position: center;
+  }
+
   .Recovery-container {
       margin-top: 15px;
       max-width: 100%;
@@ -168,6 +253,10 @@
   }
 
   .Branding-text-block {
+    display: none;
+  }
+
+  .Homerun-text-block {
     display: none;
   }
 
